--- a/apply.html
+++ b/apply.html
@@ -17,13 +17,11 @@
     <!--BENTO SIDEBAR SCRIPT-->
     <script defer type="module" src="https://cdn.ampproject.org/bento.mjs" crossorigin="anonymous"></script>
     <script defer nomodule src="https://cdn.ampproject.org/bento.js" crossorigin="anonymous"></script>
-    <script defer type="module" src="https://cdn.ampproject.org/v0/bento-sidebar-1.0.mjs"
-        crossorigin="anonymous">
+    <script defer type="module" src="https://cdn.ampproject.org/v0/bento-sidebar-1.0.mjs" crossorigin="anonymous">
     </script>
     <script defer nomodule src="https://cdn.ampproject.org/v0/bento-sidebar-1.0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.ampproject.org/v0/bento-sidebar-1.0.css" crossorigin="anonymous"
-        media="print" onload="this.media='all'"
-    >
+        media="print" onload="this.media='all'">
 </head>
 <!--END OF HEAD-->
 
@@ -69,62 +67,66 @@
         </header>
         <!--END OF HEADER-->
         <article class="application" aria-label="application form">
-            <h2>Application Form</h2>
-            <form action="application form" method="post">
-                <fieldset>
-                    <legend>Please fill out this form with the required information</legend>
-                    <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text"
-                        required autocomplete="cc-given-name">
-                    </label>
-                    <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text"
-                        required autocomplete="cc-family-name">
-                    </label>
-                    <label for="personal-email">Enter Your Email: <input id="personal-email" name="email" type="email"
-                        required autocomplete="email">
-                    </label>
-                    <label for="age">Enter Your Age (years): <input id="age" type="number" name="age" min="18"
-                        max="100">
-                    </label>
-                    <label for="dob">Enter Your Date Of Birth: <input id="dob" type="date" name="dob"></label>
-                    <label for="phone">Enter Your Phone Number: <input id="phone" type="tel" name="phone"
-                        autocomplete="mobile">
-                    </label>
-                    <label for="address">Enter Your Home Address <input type="text" name="address" id="address"
-                        autocomplete="address-level1">
-                    </label>
-                    <label for="income-label" aria-label="income">Source Of Income
-                        <select class="drop_down_menu" id="income-label">
-                            <option value="">(select one)</option>
-                            <option value="1">Employed</option>
-                            <option value="2">Retired</option>
-                            <option value="3">Self-Employed</option>
-                            <option value="4">Unemployed</option>
-                            <option value="5">Military</option>
-                        </select>
-                    </label>
-                </fieldset>
-                <fieldset>
-                    <legend>
-                        <label for="platinum-card"><input id="platinum-card" type="radio" name="card-type"
-                            class="inline"> Platinum Card
+            <div class="container">
+                <h2>Application Form</h2>
+                <form action="application form" method="post">
+                    <fieldset>
+                        <legend>Please fill out this form with the required information</legend>
+                        <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name"
+                            type="text" required autocomplete="cc-given-name">
                         </label>
-                        <label for="cash-card"><input id="cash-card" type="radio" name="card-type" class="inline"> Cash
-                            Card
+                        <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text"
+                            required autocomplete="cc-family-name">
                         </label>
-                        <label for="personal-card"><input id="personal-card" type="radio" name="card-type"
-                            class="inline"> Personal Card
+                        <label for="personal-email">Enter Your Email: <input id="personal-email" name="email"
+                            type="email" required autocomplete="email">
                         </label>
-                        <label for="business-card"><input id="business-card" type="radio" name="card-type"
-                            class="inline"> Business Card
+                        <label for="age">Enter Your Age (years): <input id="age" type="number" name="age" min="18"
+                            max="100">
                         </label>
-                        <label for="terms-and-conditions" name="terms-and-conditions">
-                            <input id="terms-and-conditions" type="checkbox" required name="terms-and-conditions"
-                            class="inline"> I accept the <a href="#">terms and conditions</a>
+                        <label for="dob">Enter Your Date Of Birth: <input id="dob" type="date" name="dob"></label>
+                        <label for="phone">Enter Your Phone Number: <input id="phone" type="tel" name="phone"
+                            autocomplete="mobile">
                         </label>
-                    </legend>
-                </fieldset>
-                <label for="submit-label" class="label5"><input type="submit" id="submit-label" value="submit"></label>
-            </form>
+                        <label for="address">Enter Your Home Address <input type="text" name="address" id="address"
+                            autocomplete="address-level1">
+                        </label>
+                        <label for="income-label" aria-label="income">Source Of Income
+                            <select class="drop_down_menu" id="income-label">
+                                <option value="">(select one)</option>
+                                <option value="1">Employed</option>
+                                <option value="2">Retired</option>
+                                <option value="3">Self-Employed</option>
+                                <option value="4">Unemployed</option>
+                                <option value="5">Military</option>
+                            </select>
+                        </label>
+                    </fieldset>
+                    <fieldset>
+                        <legend>
+                            <label for="platinum-card"><input id="platinum-card" type="radio" name="card-type"
+                                class="inline"> Platinum Card
+                            </label>
+                            <label for="cash-card"><input id="cash-card" type="radio" name="card-type" class="inline">
+                                Cash Card
+                            </label>
+                            <label for="personal-card"><input id="personal-card" type="radio" name="card-type"
+                                class="inline"> Personal Card
+                            </label>
+                            <label for="business-card"><input id="business-card" type="radio" name="card-type"
+                                class="inline"> Business Card
+                            </label>
+                            <label for="terms-and-conditions" name="terms-and-conditions">
+                                <input id="terms-and-conditions" type="checkbox" required name="terms-and-conditions"
+                                class="inline"> I accept the <a href="#">terms and conditions</a>
+                            </label>
+                        </legend>
+                    </fieldset>
+                    <label for="submit-label" class="label5"><input type="submit" id="submit-label"
+                        value="submit">
+                    </label>
+                </form>
+            </div>
         </article>
         <!--END OF APPLICATION FORM-->
         <footer id="footer" aria-label="footer">
@@ -143,16 +145,8 @@
                 <article class="footer-column">
                     <h3 class="footer-title">Photo Credit</h3>
                     <ul>
-                        <li><a
-                                href="https://www.freepik.com/free-vector/credit-card-concept-illustration_5360846.htm#query=credit%20card&position=13&from_view=author">Image
-                                by storyset
-                            </a> on Freepik
-                        </li>
-                        <li><a
-                                href="https://www.pexels.com/photo/roll-of-american-dollar-banknotes-tightened-with-band-4386476/">Karolina
-                                Grabowska
-                            </a>
-                        </li>
+                        <li><a href="https://www.freepik.com/free-vector/credit-card-concept-illustration_5360846.htm#query=credit%20card&position=13&from_view=author">Image by storyset</a> on Freepik</li>
+                        <li><a href="https://www.pexels.com/photo/roll-of-american-dollar-banknotes-tightened-with-band-4386476/">Karolina Grabowska</a></li>
                         <li><a href="https://www.pexels.com/photo/close-up-of-coins-on-table-332304/">Skitterphoto</a></li>
                         <li><a href="https://unsplash.com/photos/DJoG5GsXfMw">Marcus Winkler</a></li>
                         <li><a href="https://unsplash.com/photos/z4VuRg-ZOEg">Dmitry Demidko</a></li>
@@ -183,16 +177,16 @@
             <section id="footer-socials" aria-label="social media">
                 <ul class="footer-icons">
                     <li><a href="#" aria-label="facebook">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round" class="feather feather-facebook">
                                 <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
                             </svg>
                         </a>
                     </li>
                     <li><a href="#" aria-label="twitter">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round" class="feather feather-twitter">
                                 <path
                                     d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z">
@@ -201,9 +195,9 @@
                         </a>
                     </li>
                     <li><a href="#" aria-label="instagram">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2"
-                                stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-instagram">
                                 <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
                                 <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
                                 <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
@@ -211,8 +205,8 @@
                         </a>
                     </li>
                     <li><a href="#" aria-label="github">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round" class="feather feather-github">
                                 <path
                                     d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
@@ -221,8 +215,8 @@
                         </a>
                     </li>
                     <li><a href="#" aria-label="linkedin">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round" class="feather feather-linkedin">
                                 <path
                                     d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z">
@@ -233,8 +227,8 @@
                         </a>
                     </li>
                     <li><a href="#" aria-label="youtube">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round" class="feather feather-youtube">
                                 <path
                                     d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z">
