--- a/signin.html
+++ b/signin.html
@@ -17,7 +17,9 @@
     <!--BENTO SIDEBAR SCRIPT-->
     <script defer type="module" src="https://cdn.ampproject.org/bento.mjs" crossorigin="anonymous"></script>
     <script defer nomodule src="https://cdn.ampproject.org/bento.js" crossorigin="anonymous"></script>
-    <script defer type="module" src="https://cdn.ampproject.org/v0/bento-sidebar-1.0.mjs" crossorigin="anonymous"></script>
+    <script defer type="module" src="https://cdn.ampproject.org/v0/bento-sidebar-1.0.mjs"
+        crossorigin="anonymous">
+    </script>
     <script defer nomodule src="https://cdn.ampproject.org/v0/bento-sidebar-1.0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.ampproject.org/v0/bento-sidebar-1.0.css" crossorigin="anonymous"
         media="print" onload="this.media='all'"
@@ -72,11 +74,42 @@
             <div class="container">
                 <form action="sign in" method="post">
                     <fieldset>
-                        <legend>
-                            <h2>Sign In</h2>
+                        <legend class="signin-legend">
+                            <h2 class="signin-h2">
+                                <svg aria-label="user svg" class="user-svg" fill="#000000"
+                                    height="48px" width="48px" version="1.1" id="Layer_1"
+                                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                    viewBox="0 0 512 512" xml:space="preserve">
+                                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                    <g id="SVGRepo_iconCarrier">
+                                        <g>
+                                            <g>
+                                                <path
+                                                    d="M256,0C114.608,0,0,114.608,0,256s114.608,256,256,256s256-114.608,256-256S397.392,0,256,0z M256,496 C123.664,496,16,388.336,16,256S123.664,16,256,16s240,107.664,240,240S388.336,496,256,496z">
+                                                </path>
+                                            </g>
+                                        </g>
+                                        <g>
+                                            <g>
+                                                <path
+                                                    d="M257.408,106.256c-32.704,0-59.296,26.608-59.296,59.312s26.592,59.296,59.296,59.296 c32.704,0,59.312-26.592,59.312-59.296C316.72,132.864,290.112,106.256,257.408,106.256z M257.408,208.864 c-23.872,0-43.296-19.424-43.296-43.296s19.424-43.312,43.296-43.312s43.312,19.44,43.312,43.312S281.28,208.864,257.408,208.864z ">
+                                                </path>
+                                            </g>
+                                        </g>
+                                        <g>
+                                            <g>
+                                                <path
+                                                    d="M314.112,252.256l-56.704,42.752l-56.704-42.752c-69.792,20.944-68.912,91.6-68.912,91.6h125.616h125.616 C383.024,343.856,383.904,273.2,314.112,252.256z M257.392,327.84H149.824c3.888-17.408,15.2-44.688,48.048-57.68l49.904,37.616 c2.848,2.144,6.24,3.216,9.632,3.216c3.392,0,6.784-1.072,9.632-3.216l49.904-37.632c33.008,13.024,44.256,40.272,48.096,57.696 H257.392z">
+                                                </path>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </svg> Sign In
+                            </h2>
                         </legend>
                         <label for="name"> User Name:<input id="name" type="text" required="full name"
-                                aria-label="legal name" autocomplete="username">
+                            aria-label="legal name" autocomplete="username">
                         </label>
                         <label for="password"> Password:<input id="password" name="password" type="password" required />
                         </label>
@@ -87,6 +120,12 @@
                         <label for="submit"><input type="submit" id="submit" class="sign_in" value="sign in"
                             aria-label="click button">
                         </label>
+                    </fieldset>
+                    <fieldset>
+                        <legend>
+                            <small class="forgot-password"><a href="#">Forgot UserName or Password?</small></p>
+                            <small class="forgot-password"><a href="#">Create New Online Account</small></p>
+                        </legend>
                     </fieldset>
                 </form>
             </div>
