--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <picture class="about-picture">
                     <source media="(max-width: 500px)" srcset="./imgs/5360846_Credit-card500w.avif" type="image/avif">
                     <source media="(max-width: 500px)" srcset="./imgs/5360846_Credit-card500w.webp" type="image/webp">
-                    <source media="(min-width: 500px)" srcset="./imgs/5360846_Credit-card.avif" type="image/avif">
-                    <source media="(min-width: 500px)" srcset="./imgs/5360846_Credit-card.webp" type="image/webp">
+                    <source media="(max-width: 1920px)" srcset="./imgs/5360846_Credit-card.avif" type="image/avif">
+                    <source media="(max-width: 1920px)" srcset="./imgs/5360846_Credit-card.webp" type="image/webp">
                     <img src="./imgs/5360846_Credit-card.jpg" width="1000" height="1000" alt="credit card illustration">
                 </picture>
             </div>
